# hackathon_mobilites_2025

./: Organisation et lancement des services Onyxia.md  README.md  pyproject.toml  requirements.txt  requirments.txt
data/: etablissements_et_services_pour_adultes_handicapes.csv  etablissements_et_services_pour_l_enfance_et_la_jeunesse_handicapee.csv  etablissements_geoparquet.gpq  les_etablissements_hospitaliers_franciliens.csv
data/enrich/: final_table.gpq  final_table_with_class.gbq
data/interim/: metro_conexion_qualif.parquet  metro_connexion_nombre_etape.parquet  ref_gares.gpq  validation_pourcentage.parquet
docs/: Equipe2_README2025.md  Présentation des défis.md  Template README 2025.md
notebooks/: HM2025 - Snippets de code.ipynb  file_aggregation.py  front.py  import_metro_connexion.ipynb  requirements.txt
resultats/: README.md
resultats/repository/dataprep/: main.py  verification_table.ipynb
resultats/repository/dataprep/enrich/job/: classification_stations_job.py  enrich_job.py
resultats/repository/dataprep/extract/job/: carte_pmr_job.py  etablissement_job.py  ref_gare_idf_job.py  validation_job.py
resultats/repository/geoparquet_app/: main.py
resultats/repository/notebook_process/: metro_connexion_llm.ipynb  metro_connexion_nombre_etape.ipynb
scripts/classification/: ClassificationDesStations_v0.py
