[project]
name = "hackathon-mobilites-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "polars>=1.35.2",
    "streamlit>=1.51.0",
    "streamlit-folium>=0.25.3",
]
